--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    margin: 0;
     font-family: 'Cinzel', serif;
 }
 h1{
@@ -10,17 +11,41 @@ span.intro{
 div.First{
     width: 40%;
     float: left;
-    margin-left: 4%;
+    margin-left: 5%;
     padding-left: 2%;
+
 }
 .First img{
-    width: 100%;
+    width: 110%;
 }
-a.button{
+.button{
     background-image: linear-gradient(45deg,gold,goldenrod);
     text-decoration: none;
     padding: 10px 20px;
     border-radius: 10px;
     color: aliceblue;
-    font-weight: bold;
+    font-weight: bolder;
 }
+.top-banner{
+    background-image: url("top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    
+}
+.tag-line{
+    font-weight: 900;
+    color: orange;
+    font-size: 120%;
+}
+
+.First .second-img{
+    width: 90%;
+    padding-top: 0%;
+
+}
+.Me .First h2{
+    padding-top: 5%;
+}
+
